fix user name label truncation

--- a/app/eventyay/static/common/css/_component_nav_mobile.css
+++ b/app/eventyay/static/common/css/_component_nav_mobile.css
@@ -71,15 +71,6 @@
     margin-left: 10px;
   }
 
-  .mobile-profile-name{
-    max-width: 80px;     
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    display: inline-block;
-    vertical-align: bottom;
-  }
-
   body:not(.sidebar-minimized) .sidebar .nav-second-level.collapse {
     display: none;
   }
